--- a/data/config.yml
+++ b/data/config.yml
@@ -1,10 +1,12 @@
 database:
-  driver: "sqlite"
-  dbname: "awesomemovies/db"
-  username: "user"
-  password: "password"
-  host: "localhost"
-  port: "5432"
+  driver: "mysql"
+  dbname: "am"
+  username: "root"
+  password: "test"
+  # sqlite_host: "localhost"
+  host: "127.0.0.1"
+  # sqlite_port: "5432"
+  port: "3306"
   max_lifetime: 7200
   max_open_conns: 150
   max_idle_conns: 50
